feat: close Integration execution uncertainty
